--- a/myRealPortfolio/portfolio.html
+++ b/myRealPortfolio/portfolio.html
@@ -168,7 +168,8 @@
                               
                               <div class="overlay">
                                 <p>This is a Star Wars themed hangman. 
-                                  I used Jquery to target DOM elements and javascript to manipulate the data.</p>
+                                  I used Jquery to target DOM elements and javascript to manipulate the data.
+                                </p>
                               </div>
                             </a>
                             </div>
